# esper

./: .gitmodules  MANUAL.md  README.md
hardware/: .gitignore  README.md
hardware/product/usb-programmable/: EsperDNS  EsperDNS.kicad_pcb  EsperDNS.pro  EsperDNS.sch  EsperDNS.xml  fp-info-cache
hardware/product/usb-programmable/Fab Outputs/: EsperDNS-all-pos.csv
software/: .gitignore  README.md  ToDo.md
software/Tests/: ToDo.md
software/firmware/: CMakeLists.txt  Makefile  README.md  partitions_table.csv  sdkconfig.defaults
software/firmware/components/: README.md
software/firmware/components/datetime/: CMakeLists.txt  datetime.cpp  datetime.h
software/firmware/components/debug/: CMakeLists.txt  debug.cpp  debug.h
software/firmware/components/dns/: CMakeLists.txt  dns.c  dns.cpp  dns.h  logging.cpp  server.cpp
software/firmware/components/dns.old/: dns.cpp  dns.h
software/firmware/components/error/: CMakeLists.txt  error.c  error.cpp  error.h
software/firmware/components/events/: CMakeLists.txt  events.c  events.cpp  events.h
software/firmware/components/flash/: CMakeLists.txt  filesystem.c  filesystem.cpp  filesystem.h  flash.c  flash.cpp  flash.h  storage.txt
software/firmware/components/flash/files/: app_scripts.js  blacklist.html  connected.html  defaultblacklist.txt  defaultsettings.json  homepage.html  prov_scripts.js  scripts.js  settings.html  settings.json  stylesheet.css  wifi_select.html
software/firmware/components/gpio/: CMakeLists.txt  gpio.c  gpio.cpp  gpio.h
software/firmware/components/http/: CMakeLists.txt  delete_handlers.c  delete_handlers.cpp  endpoints.txt  get_handlers.c  get_handlers.cpp  post_handlers.c  post_handlers.cpp  post_handlers.h  put_handlers.c  put_handlers.cpp  webserver.c  webserver.cpp
software/firmware/components/http/application/html/: settings.html
software/firmware/components/http/configuration/html/: connected.html
software/firmware/components/http/configuration/include/: captive_portal.h
software/firmware/components/http/include/: delete_handlers.h  get_handlers.h  post_handlers.h  put_handlers.h  webserver.h
software/firmware/components/lists/: CMakeLists.txt  lists.cpp  lists.h
software/firmware/components/logging/: CMakeLists.txt  logging.c  logging.cpp  logging.h
software/firmware/components/netif/: CMakeLists.txt  eth.c  eth.cpp  ip.c  ip.cpp  ip.h  wifi.c  wifi.cpp  wifi.h
software/firmware/components/ota/: CMakeLists.txt  ota.c  ota.cpp  ota.h
software/firmware/components/settings/: CMakeLists.txt  settings.cpp  settings.h
software/firmware/components/url/: CMakeLists.txt  url.c  url.cpp  url.h
software/firmware/configuration/: configuration.csv
software/firmware/main/: CMakeLists.txt  Kconfig.projbuild  startup.c  startup.cpp
software/firmware/spiffs/: blacklist.html
software/firmware/spiffs/application/: index.html  stylesheet.css
software/scripts/: build.sh  compress.py  send.sh
software/website/app/: index.html  querylog.json  scripts.js  settings.json  stylesheet.css
software/website/app/blacklist/: index.html
software/website/app/settings/: index.html
software/website/content/configuration/: connected.md
software/website/layouts/application/: blacklist.html  settings.html
software/website/prov/: connection.json  index.html  scripts.js  wifi.json
software/website/public/: index.xml  sitemap.xml
(+32 files in other folders)
